--- a/css/MagikPuddle.css
+++ b/css/MagikPuddle.css
@@ -22,47 +22,6 @@
     --error:   	          #B00020;
   }
 
-  /* Mobile first queries */
-
-/* Larger than mobile */
-@media (min-width: 400px) {}
-
-/* Larger than phablet */
-@media (min-width: 550px) {}
-
-/* Larger than tablet */
-@media (min-width: 750px) {}
-
-/* Larger than desktop */
-@media (min-width: 1000px) {}
-
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {}
-
-/* Utility Classes */
-
-/* Make element full width */
-.u-full-width {
-  width: 100%;
-  box-sizing: border-box; }
-
-/* Make sure elements don't run outside containers (great for images in columns) */
-.u-max-full-width {
-  max-width: 100%;
-  box-sizing: border-box; }
-
-/* Float either direction */
-.u-pull-right {
-  float: right; }
-.u-pull-left {
-  float: left; }
-
-/* Clear a float */
-.u-cf {
-  content: "";
-  display: table;
-  clear: both; }
-
   body {
     font-family: var(--font-main);
     background-color: var(--background);
@@ -94,9 +53,14 @@
   }
   
   .logo {
-    position: absolute;
-    top: -45px;
+    position: relative;
+    top: -20px;
     padding-left: 2px;
+  }
+
+  .logo #img {
+    width: auto;
+    height: 65px;
   }
   
   @media screen and (max-width: 600px) {
@@ -198,23 +162,7 @@
     max-width: 100%;
     max-height: 35rem;
   }
-  
-  .fa-twitch {
-    color: #6441a5;
-  }
-  
-  .fa-discord {
-    color: #7289da;
-  }
-  
-  .fa-youtube {
-    color: #ff0000;
-  }
-  
-  .fa-twitter {
-    color: #00aced;
-  }
-  
+   
   .email {
     text-align: center;
     color: var(--background-alt);
